# telemetry-api

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: init_db.py  main.py  populate_db.py
src/app/: crud.py  database.py  models.py  schemas.py
src/app/routers/: telemetry.py  views.py
src/app/static/: main.js  style.css
src/app/templates/: index.html
tests/: test_main.py
