[tool.poetry]
name = "telemetry-api"
version = "0.1.0"
description = "A basic CRUD API for telemetry devices using FastAPI"
authors = ["Gustavo Lewin <gustavoflewin@hotmail.com>"]
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
aiofiles = "^0.8.0"
jinja2 = "^3.0.2"
pydantic = "^1.8.2"
sqlalchemy = "<2.0"
aiosqlite = "^0.17.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
